Test Sandbox Project/src/objects/Pay_Cycle__c.object
<CustomObject>
    <customHelpPage>TOM_Admin_Guide</customHelpPage>
    <description>TOM: A pay cycle is an instance of the payroll process that selects a set of approved requested days and extracts them from TOM to the payroll system.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payroll_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payroll System</label>
        <referenceTo>Payroll_System__c</referenceTo>
        <relationshipName>Pay_Cycle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <label>Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT( YEAR( End_Date__c ) )</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Pay Cycle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>End_Date__c</columns>
        <columns>Processed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>USPayCycles</fullName>
        <columns>NAME</columns>
        <columns>End_Date__c</columns>
        <columns>Processed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Payroll_System__c</field>
            <operation>equals</operation>
            <value>ZIX</value>
        </filters>
        <label>US Pay Cycles</label>
    </listViews>
    <nameField>
        <label>Pay Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pay Cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Processed_pay_cycles_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(    NOT(ISNULL( Processed__c )),    OR(       ISCHANGED(  Name  ),       ISCHANGED(  End_Date__c ),      ISCHANGED(  Payroll_System__c )    ) )</errorConditionFormula>
        <errorMessage>Processed pay cycles cannot be changed.  Reset Pay Cycle to edit fields.</errorMessage>
    </validationRules>
</CustomObject>